# dinosaur

./: .gitignore  CMakeLists.txt  README.md  strategia.txt  to-do.txt
include/: GameProcessV2.hpp  controlprocess.hpp  filterprocess.hpp  gameprocess.hpp  memorybuffer.hpp  messagequeue.hpp  producerprocess.hpp  randomgenerator.hpp  sharedmemory.hpp  sharedqueue.hpp  util.hpp
include/game/: animation.hpp  collisionchecker.hpp  gameprocessV2.hpp  gameutil.hpp  newgameprocess.hpp  obstacle.hpp  scoreboard.hpp  screenoverlay.hpp  sheep.hpp
measurements/: 0_core_DEFAULT.txt  0_core_DEFAULT_COREBOUND.txt  0_core_FIFO.txt  0_core_FIFO_COREBOUND.txt  0_core_RR.txt  0_core_RR_COREBOUND.txt  1_core_DEFAULT.txt  1_core_DEFAULT_99.txt  1_core_FIFO.txt  1_core_RR.txt  2_core_DEFAULT.txt  2_core_DEFAULT_99.txt  2_core_FIFO.txt  2_core_RR.txt  3_core_DEFAULT.txt  3_core_FIFO.txt  3_core_RR.txt  4_core_DEFAULT.txt  4_core_DEFAULT_99.txt  4_core_FIFO.txt  4_core_FIFO_COREBOUND.txt  4_core_RR.txt
src/: controlprocess.cpp  filterprocess.cpp  gameprocess.cpp  main.cpp  old_main-bad.cpp  producerprocess.cpp  sharedmemory.cpp  sharedqueue.cpp
src/game/: animation.cpp  gameprocessV2.cpp  newgameprocess.cpp  obstacle.cpp  screenoverlay.cpp  sheep.cpp
